# Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#766] The HTTP Host header will now include the port unless it is
  the default one for a given scheme. [nnposter]

o [NSE] Fixed several potential hangs in NSE scripts that used
  receive_buf(pattern), which will not return if the service continues to send
  data that does not match pattern. A new function in match.lua, pattern_limit,
  is introduced to limit the number of bytes consumed while searching for the
  pattern. [Daniel Miller, Jacek Wielemborek]

o [NSE] The HTTP response object has a new member, fragment, which contains
  a partially received body (if any) when the overall request fails to
  complete. [nnposter]

o [NSE][GH#731] NSE is now able to process HTTP responses with a Set-Cookie
  header that has an extraneous trailing semicolon. [nnposter]

o [Nsock] Handle any and all socket connect errors the same: raise as an Nsock
  error instead of fatal. This prevents Nmap and Ncat from quitting with
  "Strange error from connect:" [Daniel Miller]

o [Ncat][GH#773] Ncat in server mode properly handles TLS renegotiations and
  other situations where SSL_read returns a non-fatal error. This was causing
  SSL-over-TCP connections to be dropped. [Daniel Miller]

o [Ncat][GH#157] Ncat will now continue trying to connect to each resolved
  address for a hostname before declaring the connection refused, allowing it
  to fallback from IPv6 to IPv4 or to connect to names that use DNS failover.
  [Jaromir Koncicky, Michal Hlavinka]

o [NSE][GH#743] New script broadcast-ospf2-discover discovers OSPF 2 routers
  and neighbors. OSPFv2 authentication is supported. [Emiliano Ticci]

o [NSE][GH#740][GH#759] New script http-vuln-cve2017-5638 checks for the RCE
  bug in Apache Struts2. [Seth Jackson]

o [NSE] Added several commands to redis-info to extract listening addresses,
  connected clients, active channels, and cluster nodes. [Vasiliy Kulikov]
